@@ -70,7 +70,7 @@ public class NetworkModificationApplicator {
         List<ApplicationStatus> groupsApplicationStatuses =
                 modificationInfosGroups.stream()
                 .map(g -> apply(g.getRight(), listener.getNetwork(), new ReportInfos(reportUuid, g.getLeft())))
-                .collect(Collectors.toList());
+                .toList();
         listener.setApplicationStatus(groupsApplicationStatuses.stream().reduce(ApplicationStatus::max).orElse(ApplicationStatus.ALL_OK));
         ApplicationStatus lastGroupApplicationStatus = !groupsApplicationStatuses.isEmpty() ? groupsApplicationStatuses.get(groupsApplicationStatuses.size() - 1) : ApplicationStatus.ALL_OK;
         listener.setLastGroupApplicationStatus(lastGroupApplicationStatus);
